--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,77 @@
+:root {
+  --blue: #00acdc;
+}
+
 body {
   margin: 0;
+  background-color: #838383;
+  font-family: Roboto, sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  margin: 0;
+  padding: 0 50px;
+  background-color: #fff;
+}
+
+.logo {
+  margin: 0;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  opacity: 1;
+}
+
+.nav {
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+.nav__link {
+  font-size: 12px;
+  text-decoration: none;
+  color: #000;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative;
+}
+
+.nav__link:hover,
+.nav__link:active,
+.nav__link.is-active {
+  color: var(--blue);
+}
+
+.nav__link.is-active {
+  position: relative;
+}
+
+.nav__link.is-active::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: var(--blue);
+  bottom: 0;
+  left: 0;
+  border-radius: 8px;
+}
+
+.nav__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
 }
