--- a/src/style.css
+++ b/src/style.css
@@ -9,40 +9,39 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
   font-weight: 500;
-  text-transform: uppercase;
-}
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0 50px;
-  background-color: #fff;
-}
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0 50px;
+    background-color: #fff;
+  }
 
-.logo img {
-  display: block;
-  width: 40px;
-  height: 40px;
-}
+  .logo {
+    display: block;
+    width: 40px;
+    height: 40px;
+  }
 
-.nav {
-  display: flex;
-  position: relative;
-  align-items: center;
-}
+  .nav {
+    display: flex;
+    position: relative;
+    align-items: center;
+  }
 
-.nav__link {
-  font-size: 12px;
-  text-decoration: none;
-  color: #000;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-  text-transform: uppercase;
-  display: inline-block;
-  position: relative;
+  .nav__link {
+    font-size: 12px;
+    text-decoration: none;
+    color: #000;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    text-transform: uppercase;
+    display: inline-block;
+    position: relative;
+  }
 }
 
 .nav__link:hover,
